--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ dependencies:
     - karr-lab-build-utils-3 install-requirements
 test:
   override:
-    - karr-lab-build-utils-2 run-tests tests --with-xunit --with-coverage
-    - karr-lab-build-utils-3 run-tests tests --with-xunit --with-coverage
+    - karr-lab-build-utils-2 run-tests tests --nocapture --with-xunit --with-coverage
+    - karr-lab-build-utils-3 run-tests tests --nocapture --with-xunit --with-coverage
   post:
     - karr-lab-build-utils make-and-archive-reports
