--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,6 @@ dependencies:
 test:
   override:
     - karr-lab-build-utils-2 run-tests tests --nocapture --with-xunit --with-coverage
-    - karr-lab-build-utils-3 run-tests tests --nocapture --with-xunit --with-coverage
+    - karr-lab-build-utils-3 run-tests tests --help --with-xunit --with-coverage
   post:
     - karr-lab-build-utils make-and-archive-reports
