stop testing coverage of temp code rename shared_cell_state.py as shared_memory_cell_state.py so file & class names are consistent

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,3 +8,5 @@ omit =
     # omit these files
 	Sequential_WC_Simulator/multialgorithm/plot_specie_pop.py
 	Sequential_WC_Simulator/multialgorithm/species_counts.py
+	Sequential_WC_Simulator/multialgorithm/temp/analysis.py
+	Sequential_WC_Simulator/multialgorithm/temp/exercise.py
