use log for debug logging: add sim_time contexts to debug config

--- a/Sequential_WC_Simulator/core/config/debug_default.cfg
+++ b/Sequential_WC_Simulator/core/config/debug_default.cfg
@@ -26,15 +26,19 @@
         [[[loggers]]]
             [[[[wc.debug.file]]]]
                 level = INFO
-                formatters = default, 
-                handlers = debug.file, 
+                formatters = default,
+                handlers = debug.file,
+                [[[[[additional_context]]]]]
+                    sim_time = get_sim_time
 
             [[[[wc.debug.console]]]]
                 level = INFO
-                formatters = default, 
-                handlers = debug.console, 
+                formatters = default,
+                handlers = debug.console,
+                [[[[[additional_context]]]]]
+                    sim_time = get_sim_time
 
             [[[[wc.plot.file]]]]
-                level = INFO
-                formatters = plot, default,
-                handlers = plot.file, 
+                level = DEBUG
+                formatters = default, plot,
+                handlers = plot.file,
