broad set of changes to 1) replace the logging package with the log package; and 2) move utilities to the new wc_utilities package

--- a/Sequential_WC_Simulator/core/config/debug_default.cfg
+++ b/Sequential_WC_Simulator/core/config/debug_default.cfg
@@ -25,7 +25,7 @@
 
         [[[loggers]]]
             [[[[wc.debug.file]]]]
-                level = INFO
+                level = DEBUG
                 formatters = default,
                 handlers = debug.file,
                 [[[[[additional_context]]]]]
