--- a/Sequential_WC_Simulator/multialgorithm/config/debug_default.cfg
+++ b/Sequential_WC_Simulator/multialgorithm/config/debug_default.cfg
@@ -22,6 +22,6 @@
                 handlers = debug.file, 
 
             [[[[wc.debug.console]]]]
-                level = DEBUG
+                level = INFO
                 formatters = default, 
                 handlers = debug.console, 
