--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ future
 recordtype
 lxml
 python-libsbml
+# install our public wc_utilities repo
+git+https://github.com/KarrLab/wc_utilities.git
+# install wheel of our public log repo
+-e git+https://github.com/KarrLab/log#egg=log
