--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,8 @@ dependencies:
     - pip2 install git+git://github.com/jonrkarr/junit2html.git
     - pip3 install git+git://github.com/jonrkarr/junit2html.git
     - sudo apt-get install libglpk-dev
-    - pip2 install Karr-Lab-build-utils
-    - pip3 install Karr-Lab-build-utils
+    - pip2 install git+git://github.com/KarrLab/Karr-Lab-build-utils.git
+    - pip3 install git+git://github.com/KarrLab/Karr-Lab-build-utils.git
     - karr-lab-build-utils-2 install-requirements
     - karr-lab-build-utils-3 install-requirements
 test:
