move install of log from circle.yml to requirements; enumerate requirements directly in setup.py install_requires

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ python-libsbml
 # install our public wc_utils repo
 git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils
 # install wheel of our public log repo
-# try in circle.yml instead; --editable=git+https://github.com/KarrLab/log#egg=log
+--editable=git+https://github.com/KarrLab/log#egg=log
