--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
       fi
     - ~/miniconda2/bin/conda install -y lxml matplotlib openpyxl numpy scipy
     - ~/miniconda2/bin/pip install -e .
-    - ~/miniconda2/bin/pip install git+git://github.com/KarrLab/Karr-Lab-build-utils.git
+    - ~/miniconda2/bin/pip install -U git+git://github.com/KarrLab/Karr-Lab-build-utils.git
     - ~/miniconda2/bin/karr-lab-build-utils install-requirements
     
     - >
@@ -24,7 +24,7 @@ dependencies:
       fi
     - ~/miniconda3/bin/conda install -y lxml matplotlib openpyxl numpy scipy
     - ~/miniconda3/bin/pip install -e .
-    - ~/miniconda3/bin/pip install git+git://github.com/KarrLab/Karr-Lab-build-utils.git
+    - ~/miniconda3/bin/pip install -U git+git://github.com/KarrLab/Karr-Lab-build-utils.git
     - ~/miniconda3/bin/karr-lab-build-utils install-requirements
 test:
   override:
