--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ dependencies:
         bash ~/Miniconda2-latest-Linux-x86_64.sh -b
       fi
     - ~/miniconda2/bin/conda install -y lxml matplotlib openpyxl numpy scipy
-    - ~/miniconda2/bin/pip install -e .
+    - ~/miniconda2/bin/pip install -e -U .
     - ~/miniconda2/bin/pip install -U git+git://github.com/KarrLab/Karr-Lab-build-utils.git
     - ~/miniconda2/bin/karr-lab-build-utils install-requirements
     
@@ -23,7 +23,7 @@ dependencies:
         bash ~/Miniconda3-latest-Linux-x86_64.sh -b
       fi
     - ~/miniconda3/bin/conda install -y lxml matplotlib openpyxl numpy scipy
-    - ~/miniconda3/bin/pip install -e .
+    - ~/miniconda3/bin/pip install -e -U .
     - ~/miniconda3/bin/pip install -U git+git://github.com/KarrLab/Karr-Lab-build-utils.git
     - ~/miniconda3/bin/karr-lab-build-utils install-requirements
 test:
