--- a/circle.yml
+++ b/circle.yml
@@ -6,15 +6,16 @@ dependencies:
     - ~/miniconda2
     - ~/miniconda3
   pre:
-    - sudo apt-get install libglpk-dev   
+    - sudo apt-get install libglpk-dev
+
     - >
       if [ ! -d ~/miniconda2 ]; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O ~/Miniconda2-latest-Linux-x86_64.sh
         bash ~/Miniconda2-latest-Linux-x86_64.sh -b
       fi
     - ~/miniconda2/bin/conda install -y lxml matplotlib openpyxl numpy scipy
-    - ~/miniconda2/bin/pip install -e -U .
-    - ~/miniconda2/bin/pip install -U git+git://github.com/KarrLab/Karr-Lab-build-utils.git
+    - ~/miniconda2/bin/pip install -e .
+    - ~/miniconda2/bin/pip install git+https://github.com/KarrLab/Karr-Lab-build-utils.git
     - ~/miniconda2/bin/karr-lab-build-utils install-requirements
     
     - >
@@ -23,8 +24,8 @@ dependencies:
         bash ~/Miniconda3-latest-Linux-x86_64.sh -b
       fi
     - ~/miniconda3/bin/conda install -y lxml matplotlib openpyxl numpy scipy
-    - ~/miniconda3/bin/pip install -e -U .
-    - ~/miniconda3/bin/pip install -U git+git://github.com/KarrLab/Karr-Lab-build-utils.git
+    - ~/miniconda3/bin/pip install -e .
+    - ~/miniconda3/bin/pip install git+https://github.com/KarrLab/Karr-Lab-build-utils.git
     - ~/miniconda3/bin/karr-lab-build-utils install-requirements
 test:
   override:
