--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,12 @@ include requirements.txt
 
 # examples
 recursive-include examples *
+
+# configuration files
+Sequential_WC_Simulator/core/config/core.schema.cfg
+Sequential_WC_Simulator/core/config/core.default.cfg
+Sequential_WC_Simulator/core/config/debug.default.cfg
+Sequential_WC_Simulator/multialgorithm/config/core.schema.cfg
+Sequential_WC_Simulator/multialgorithm/config/core.default.cfg
+Sequential_WC_Simulator/multialgorithm/config/debug.default.cfg
+examples/config/debug.default.cfg
