forcing package updates

--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ dependencies:
       fi
     - ~/miniconda2/bin/conda install -y lxml matplotlib openpyxl numpy scipy
     - ~/miniconda2/bin/pip install -e .
-    - ~/miniconda2/bin/pip install git+https://github.com/KarrLab/Karr-Lab-build-utils.git
+    - ~/miniconda2/bin/pip install -U -e git+https://github.com/KarrLab/Karr-Lab-build-utils.git#egg=Karr-Lab-build-utils
     - ~/miniconda2/bin/karr-lab-build-utils install-requirements
     
     - >
@@ -25,7 +25,7 @@ dependencies:
       fi
     - ~/miniconda3/bin/conda install -y lxml matplotlib openpyxl numpy scipy
     - ~/miniconda3/bin/pip install -e .
-    - ~/miniconda3/bin/pip install git+https://github.com/KarrLab/Karr-Lab-build-utils.git
+    - ~/miniconda3/bin/pip install -U -e git+https://github.com/KarrLab/Karr-Lab-build-utils.git#egg=Karr-Lab-build-utils
     - ~/miniconda3/bin/karr-lab-build-utils install-requirements
 test:
   override:
