simplifying module name

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,12 +1,12 @@
 [run]
 include =
 	# include these files
-	Sequential_WC_Simulator/*
+	wc_sim/*
 	tests/*
 	examples/*	
 omit =
     # omit these files
-	Sequential_WC_Simulator/multialgorithm/plot_specie_pop.py
-	Sequential_WC_Simulator/multialgorithm/species_counts.py
-	Sequential_WC_Simulator/multialgorithm/temp/analysis.py
-	Sequential_WC_Simulator/multialgorithm/temp/exercise.py
+	wc_sim/multialgorithm/plot_specie_pop.py
+	wc_sim/multialgorithm/species_counts.py
+	wc_sim/multialgorithm/temp/analysis.py
+	wc_sim/multialgorithm/temp/exercise.py
