--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,8 @@ universal = 1
 
 [coverage:run]
 source = 
-    Sequential_WC_Simulator
+    wc_sim
 
 [sphinx-apidocs]
 packages = 
-    Sequential_WC_Simulator
+    wc_sim
