--- a/wc_sim/core/config/core.schema.cfg
+++ b/wc_sim/core/config/core.schema.cfg
@@ -1,4 +1,4 @@
-[Sequential_WC_Simulator]
+[wc_sim]
     [[core]]
         copy_event_bodies = boolean(default=False)
         # whether to deepcopy each event_body in SimulationObject.send_event() before 
