--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -1,4 +1,4 @@
-[Sequential_WC_Simulator]
+[wc_sim]
     [[multialgorithm]]
         interpolate = boolean(default=True)
         # whether to interpolate specie counts when executing Specie.get_population()
