moving out wc_lang into separate repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 cobra
+future
+lxml
 matplotlib
 numpy
-scipy
 openpyxl
-future
-recordtype
-lxml
 python-libsbml
+recordtype
+scipy
+git+https://github.com/KarrLab/wc_lang.git#egg=wc_lang
 git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils
