--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
         bash ~/Miniconda2-latest-Linux-x86_64.sh -b
       fi
     - ~/miniconda2/bin/conda install -y lxml matplotlib openpyxl numpy scipy
+    - ~/miniconda2/bin/conda update -y lxml matplotlib openpyxl numpy scipy
     - ~/miniconda2/bin/pip install -U -e git+https://github.com/KarrLab/Karr-Lab-build-utils.git#egg=Karr-Lab-build-utils
     - ~/miniconda2/bin/karr-lab-build-utils install-requirements
     - ~/miniconda2/bin/pip install -e .
@@ -24,6 +25,7 @@ dependencies:
         bash ~/Miniconda3-latest-Linux-x86_64.sh -b
       fi
     - ~/miniconda3/bin/conda install -y lxml matplotlib openpyxl numpy scipy
+    - ~/miniconda3/bin/conda update -y lxml matplotlib openpyxl numpy scipy
     - ~/miniconda3/bin/pip install -U -e git+https://github.com/KarrLab/Karr-Lab-build-utils.git#egg=Karr-Lab-build-utils
     - ~/miniconda3/bin/karr-lab-build-utils install-requirements
     - ~/miniconda3/bin/pip install -e .    
