remove CellState, and references to it. make local cell state accessed via local methods, and wrap it as a simulation object. include and use a 'read_one()' method which concisely supports reading the population of one specie. this prepares for distributing species populations across local and shared stores.

--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -3,8 +3,7 @@
         interpolate = boolean(default=True)
         # whether to interpolate specie counts when executing Specie.get_population()
         # interpolation incorporates a linear estimate of the change in copy number 
-        # since the last update by a continuous model; see the documentation of 
-        # CellState for more details
+        # since the last update by a continuous model
         # TODO(Arthur): unitests only work with interpolate=True; have them work either
 
         default_output_directory = string(default='.')
