start converting to wc_lang model representation build private_species() and find_shared_species()

--- a/wc_sim/core/config/core.schema.cfg
+++ b/wc_sim/core/config/core.schema.cfg
@@ -7,7 +7,7 @@
 
         default_center_of_mass = integer(default=10)
         # the default center of mass for exponential moving average calculations
-        # TODO(Arthur): DEFAULT_CENTER_OF_MASS should be moved to config for utilities
+        # TODO(Arthur): DEFAULT_CENTER_OF_MASS should be moved to multialgorithm/config/core.default.cfg
 
         reproducible_seed = integer(default=None)
         # a random seed that makes a simulation reproducible
