--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -4,7 +4,7 @@
         # whether to interpolate specie counts when executing Specie.get_population()
         # interpolation incorporates a linear estimate of the change in copy number 
         # since the last update by a continuous model
-        # TODO(Arthur): unitests only work with interpolate=True; have them work either
+        # TODO(Arthur): unitests only work with interpolate=True; have them work both ways
 
         default_output_directory = string(default='.')
         # the default output directory
