--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -18,5 +18,6 @@
         ssa_event_logging_spacing = integer(default=100)
         # the interval between log messages for SSA events
         
-        epsilon = float(default=1e-12)
-        # a small time period (in seconds) for shifting event times
+        epsilon = float(default=1e-9)
+        # a small time period (in seconds) for shifting event times to control the order of
+        # near simultaneous events
