add default bounds for FBA reaction fluxes

--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -21,3 +21,7 @@
         epsilon = float(default=1e-9)
         # a small time period (in seconds) for shifting event times to control the order of
         # near simultaneous events
+
+        default_min_flux_bound = float(default=0)
+        default_max_flux_bound = float(default=1000)
+        # default flux bounds for reactions in dFBA submodels
