--- a/wc_sim/multialgorithm/config/core.default.cfg
+++ b/wc_sim/multialgorithm/config/core.default.cfg
@@ -6,3 +6,5 @@
         initial_ssa_wait_ema = 1
         ssa_event_logging_spacing = 100
         epsilon = 1e-9
+        default_min_flux_bound = 0
+        default_max_flux_bound = 1000
