--- a/wc_sim/multialgorithm/config/core.default.cfg
+++ b/wc_sim/multialgorithm/config/core.default.cfg
@@ -8,3 +8,5 @@
         epsilon = 1e-9
         default_min_flux_bound = 0
         default_max_flux_bound = 1000
+        GAP_FILLING_RXN_ID_PREFIX = '__gap_fill_reaction_'
+        GAP_FILLING_RXN_NAME_PREFIX = '__gap_fill_reaction_name_'
