--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,8 @@ configparser
 future
 recordtype
 robpol86-sphinxcontrib-googleanalytics
+six
 Sphinx
 sphinx_rtd_theme
+sphinxcontrib-bibtex
+sphinxcontrib-spelling; python_version >= '3.0'
