--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,7 +3,7 @@ future
 recordtype
 robpol86-sphinxcontrib-googleanalytics
 six
-Sphinx
+Sphinx >= 1.6
 sphinx_rtd_theme
 sphinxcontrib-bibtex
 sphinxcontrib-spelling; python_version >= '3.0'
