--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ matplotlib
 numpy
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model
 openpyxl
-python-libsbml
+python_libsbml
 recordtype
 scipy
 spam
