--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ future
 lxml
 matplotlib
 numpy
-git+https://github.com/KarrLab/obj_model.git#egg=obj_model
+git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.4
 openpyxl
 python_libsbml
 recordtype
 scipy
 spam
-git+https://github.com/KarrLab/wc_lang.git#egg=wc_lang
-git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils
+git+https://github.com/KarrLab/wc_lang.git#egg=wc_lang-0.0.1
+git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils-0.0.1a5
