--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ numpy
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.5
 openpyxl
 python_libsbml
+python_libsedml
 recordtype
 scipy
 spam
