adding email notifications to build config

--- a/.karr_lab_build_utils.yml
+++ b/.karr_lab_build_utils.yml
@@ -1,1 +1,5 @@
-- mycoplasma_pneumoniae
+downstream_dependencies:
+  - mycoplasma_pneumoniae
+email_notifications:
+  - jonrkarr@gmail.com
+  - arthur.p.goldberg@mssm.edu
