--- a/wc_sim/core/config/core.schema.cfg
+++ b/wc_sim/core/config/core.schema.cfg
@@ -1,8 +1,8 @@
 [wc_sim]
     [[core]]
         copy_event_bodies = boolean(default=False)
-        # whether to deepcopy each event_body in SimulationObject.send_event() before 
-        # scheduling an event that stores the event_body in an Event().
+        # whether to deepcopy each message in SimulationObject.send_event() before 
+        # scheduling an event that stores the message in an Event().
         # deepcopy avoids possible data sharing conflicts, but costs time & memory
 
         default_center_of_mass = integer(default=10)
