adding openbabel channel to support RTD

--- a/docs/conda.environment.yml
+++ b/docs/conda.environment.yml
@@ -4,10 +4,12 @@ channels:
   - defaults
   - SBMLTeam
   - sys-bio
+  - openbabel
 dependencies:
   - libsedml
   - matplotlib
   - numpy
+  - openbabel
   - pip
   - pygit2
   - python>=3.6.4
