generic stochastic prediction test for SSA submodel simulation configure all logs to level INFO, so log.debug() statements don't produce output and simulation performs well

--- a/wc_sim/multialgorithm/config/debug.default.cfg
+++ b/wc_sim/multialgorithm/config/debug.default.cfg
@@ -16,7 +16,7 @@
 
     [[loggers]]
         [[[wc.debug.file]]]
-            level = DEBUG
+            level = INFO
             formatters = default, 
             handlers = debug.file, 
 
