--- a/wc_sim/core/config/debug.default.cfg
+++ b/wc_sim/core/config/debug.default.cfg
@@ -24,7 +24,7 @@
 
     [[loggers]]
         [[[wc.debug.file]]]
-            level = DEBUG
+            level = INFO
             formatters = default,
             handlers = debug.file,
             [[[[additional_context]]]]
@@ -38,6 +38,6 @@
                 sim_time = get_sim_time
 
         [[[wc.plot.file]]]
-            level = DEBUG
+            level = INFO
             formatters = default, plot,
             handlers = plot.file,
