convert checkpoint history of a simulation run to a pandas DataFrame; create MultialgorithmCheckpoint, a checkpoint class that holds multialgorithmic checkpoints

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cobra
 matplotlib
 numpy
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.5
+pandas
 python_libsedml
 recordtype
 scipy
