--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cobra
 matplotlib
 numpy
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.5
-pandas
+pandas==0.22.0      # 0.23.0 fails in pandas.HDFStore()
 python_libsedml
 recordtype
 scipy
