--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,12 @@ cobra
 matplotlib
 numpy
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.5
-pandas==0.22.0      # 0.23.0 fails in pandas.HDFStore()
+pandas
 python_libsedml
 recordtype
 scipy
 setuptools
 spam
+tables
 git+https://github.com/KarrLab/wc_lang.git#egg=wc_lang-0.0.1
 git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils-0.0.1a5
