integrating wc/multialgorithm/wc_simulate.py with cement CLI

--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -20,3 +20,5 @@
         epsilon = float(default=1e-9)
         # a small time period (in seconds) for shifting event times to control the order of
         # near simultaneous events
+
+        checkpoint_period = float(min=0, default=10)
