simplifying config option names

--- a/wc_sim/multialgorithm/config/core.default.cfg
+++ b/wc_sim/multialgorithm/config/core.default.cfg
@@ -1,8 +1,8 @@
 [wc_sim]
     [[multialgorithm]]
         interpolate = True
-        default_output_directory = '.'
-        default_fba_time_step = 1.0
+        output_directory = '.'
+        fba_time_step = 1.0
         initial_ssa_wait_ema = 1
         ssa_event_logging_spacing = 100
         epsilon = 1e-9
