--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -5,19 +5,19 @@
         # interpolation incorporates a linear estimate of the change in copy number 
         # since the last update by a continuous submodel
 
-        default_output_directory = string(default='.')
+        output_directory = string(default='.')
         # the default output directory
         
-        default_fba_time_step = float(default=1.0)
+        fba_time_step = float(min=0, default=1.0)
         # the default time step for FBA submodels
         
-        initial_ssa_wait_ema = integer(default=1)        
+        initial_ssa_wait_ema = integer(min=0, default=1)        
         # the default initialization value (in seconds) for an SSA Wait EMA
         
-        ssa_event_logging_spacing = integer(default=100)
+        ssa_event_logging_spacing = integer(min=0, default=100)
         # the interval between log messages for SSA events
         
-        epsilon = float(default=1e-9)
+        epsilon = float(min=0, default=1e-9)
         # a small time period (in seconds) for shifting event times to control the order of
         # near simultaneous events
 
