--- a/.karr_lab_build_utils.yml
+++ b/.karr_lab_build_utils.yml
@@ -1,7 +1,8 @@
 downstream_dependencies:
   - mycoplasma_pneumoniae
+  - rand_wc_model_gen
   - wc
-  - wc_test
+  - wc_test  
 email_notifications:
   - jonrkarr@gmail.com
   - arthur.p.goldberg@mssm.edu
