fixing CircleCI report archiving; moving debug logs to ~/.wc/log

--- a/examples/config/debug.default.cfg
+++ b/examples/config/debug.default.cfg
@@ -7,7 +7,7 @@
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
-            filename = ~/tmp/logs/wc/debug.log
+            filename = ~/.wc/log/wc_sim.examples.debug.log
             mode = a
 
         [[[debug.console]]]
