--- a/wc_sim/core/config/debug.default.cfg
+++ b/wc_sim/core/config/debug.default.cfg
@@ -10,12 +10,12 @@
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
-            filename = ~/tmp/logs/wc/debug.log
+            filename = ~/.wc/log/wc_sim.core.debug.log
             mode = a
 
         [[[plot.file]]]
             class = FileHandler
-            filename = ~/tmp/logs/wc/plot.log
+            filename = ~/.wc/log/wc_sim.core.plot.log
             mode = w
 
         [[[debug.console]]]
