--- a/wc_sim/multialgorithm/config/debug.default.cfg
+++ b/wc_sim/multialgorithm/config/debug.default.cfg
@@ -7,7 +7,7 @@
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
-            filename = ~/tmp/logs/wc/debug.log
+            filename = ~/.wc/log/wc_sim.multialgorithm.debug.log
             mode = a
 
         [[[debug.console]]]
