--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.5
 pandas
 python_libsedml
 recordtype
+scikits.odes
 scipy
 setuptools
 tables
