updating for renaming wc-->wc_cli

--- a/.karr_lab_build_utils.yml
+++ b/.karr_lab_build_utils.yml
@@ -1,7 +1,7 @@
 downstream_dependencies:
   - mycoplasma_pneumoniae
   - rand_wc_model_gen
-  - wc
+  - wc_cli
   - wc_test
   - h1_hesc
 email_notifications:
