updating for refactoring wc_lang units

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ matplotlib
 numpy
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model-0.0.5
 pandas
+pint
 python_libsedml
 recordtype
 scikits.odes
