updating for wc_lang.ChemicalStructure

--- a/.circleci/requirements.txt
+++ b/.circleci/requirements.txt
@@ -2,6 +2,7 @@
 git+https://github.com/KarrLab/log.git#egg=log
 
 # Karr Lab
+git+https://github.com/KarrLab/bpforms.git#egg=bpforms
 git+https://github.com/KarrLab/wc_onto.git#egg=wc_onto
 git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils
 git+https://github.com/KarrLab/obj_model.git#egg=obj_model
