updating for replacing log with logging2

--- a/examples/config/debug.default.cfg
+++ b/examples/config/debug.default.cfg
@@ -1,26 +1,20 @@
 # log config for the wc simulator examples
 [debug_logs]
-    [[formatters]]
-        [[[default]]]
-            template = {timestamp}; {name:s}; {level:s}; {src:s}:{func:s}:{line:d}; {sim_time:f}; {message:s}
-
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
-            filename = ~/.wc/log/wc_sim.examples.debug.log
-            mode = a
+            filename = ~/.wc/log/wc_sim.debug.log
+            level = debug
 
         [[[debug.console]]]
-            class = StreamHandler
-            stream = stdout
+            class = StdOutHandler
+            level = info
 
     [[loggers]]
         [[[wc.debug.file]]]
-            level = DEBUG
-            formatters = default, 
-            handlers = debug.file, 
+            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {message:s}
+            handler = debug.file
 
-        [[[wc.debug.console]]]
-            level = DEBUG
-            formatters = default, 
-            handlers = debug.console, 
+        [[[wc.debug.console]]]            
+            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {message:s}
+            handler = debug.console
