--- a/wc_sim/multialgorithm/config/debug.default.cfg
+++ b/wc_sim/multialgorithm/config/debug.default.cfg
@@ -1,26 +1,20 @@
 # log config for the wc simulator examples
 [debug_logs]
-    [[formatters]]
-        [[[default]]]
-            template = {timestamp}; {name:s}; {level:s}; {src:s}:{func:s}:{line:d}; {sim_time:f}; {message:s}
-
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
             filename = ~/.wc/log/wc_sim.multialgorithm.debug.log
-            mode = a
+            level = info
 
         [[[debug.console]]]
-            class = StreamHandler
-            stream = stdout
+            class = StdOutHandler
+            level = info
 
     [[loggers]]
         [[[wc.debug.file]]]
-            level = INFO
-            formatters = default, 
-            handlers = debug.file, 
+            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
+            handler = debug.file 
 
         [[[wc.debug.console]]]
-            level = INFO
-            formatters = default, 
-            handlers = debug.console, 
+            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
+            handler = debug.console
