--- a/wc_sim.core.debug.cfg
+++ b/wc_sim.core.debug.cfg
@@ -1,43 +1,33 @@
 # log config for the core WC simulator
 [debug_logs]
-    [[formatters]]
-        [[[default]]]
-            template = {timestamp}; {name:s}; {level:s}; {src:s}:{func:s}:{line:d}; {sim_time:f}; {message:s}
-
-        [[[plot]]]
-            template = {timestamp}; {message:s}
-
     [[handlers]]
         [[[debug.file]]]
             class = FileHandler
             filename = ~/tmp/logs/wc/debug.log
-            mode = a
+            level = debug
 
         [[[plot.file]]]
             class = FileHandler
             filename = ~/tmp/logs/wc/plot.log
-            mode = w
+            level = info
 
         [[[debug.console]]]
-            class = StreamHandler
-            stream = stdout
+            class = StdOutHandler
+            level = info
 
     [[loggers]]
-        [[[wc.debug.file]]]
-            level = DEBUG
-            formatters = default,
-            handlers = debug.file,
+        [[[wc.debug.file]]]            
+            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
+            handler = debug.file
             [[[[additional_context]]]]
                 sim_time = get_sim_time
 
-        [[[wc.debug.console]]]
-            level = INFO
-            formatters = default,
-            handlers = debug.console,
+        [[[wc.debug.console]]]            
+            template = {timestamp}; {name:s}; {level:s}; {source}:{function:s}:{line:d}; {sim_time:f}; {message:s}
+            handler = debug.console
             [[[[additional_context]]]]
                 sim_time = get_sim_time
 
-        [[[wc.plot.file]]]
-            level = INFO
-            formatters = default, plot,
-            handlers = plot.file,
+        [[[wc.plot.file]]]            
+            template = {timestamp}; {message:s}
+            handler = plot.file
