configure use of de_sim, and remove local duplicate files

--- a/wc_sim/multialgorithm/config/core.default.cfg
+++ b/wc_sim/multialgorithm/config/core.default.cfg
@@ -7,3 +7,4 @@
         ssa_event_logging_spacing = 100
         epsilon = 1e-9
         checkpoint_period = 10
+        default_center_of_mass = 10
