--- a/wc_sim/multialgorithm/config/core.schema.cfg
+++ b/wc_sim/multialgorithm/config/core.schema.cfg
@@ -11,7 +11,7 @@
         fba_time_step = float(min=0, default=1.0)
         # the default time step for FBA submodels
         
-        initial_ssa_wait_ema = integer(min=0, default=1)        
+        initial_ssa_wait_ema = integer(min=0, default=1)
         # the default initialization value (in seconds) for an SSA Wait EMA
         
         ssa_event_logging_spacing = integer(min=0, default=100)
@@ -22,3 +22,7 @@
         # near simultaneous events
 
         checkpoint_period = float(min=0, default=10)
+
+        default_center_of_mass = integer()
+        # a center of mass for initializing alpha,
+        # the decay factor in an exponential moving average
