--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+bpforms
 callbacks
 cement >= 3.0.0
 cobra
+de_sim
 matplotlib
 numpy
 obj_model
@@ -12,3 +14,6 @@ scikits.odes
 scipy
 setuptools
 tables >= 3.5.0
+wc_lang
+wc_onto
+wc_utils
