--- a/.circleci/requirements.txt
+++ b/.circleci/requirements.txt
@@ -1,5 +1,6 @@
 # Karr Lab
 git+https://github.com/KarrLab/bpforms.git#egg=bpforms
+git+https://github.com/KarrLab/bcforms.git#egg=bcforms
 git+https://github.com/KarrLab/wc_utils.git#egg=wc_utils
 git+https://github.com/KarrLab/wc_onto.git#egg=wc_onto
 git+https://github.com/KarrLab/obj_tables.git#egg=obj_tables
