add biological_type to compartments made by MakeModel; update TestModelUtilities; fix long line formatting

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 filterwarnings  =
     ignore:.*inspect.getargspec.* is deprecated:DeprecationWarning
     ignore:.*invalid escape sequence \\:DeprecationWarning
+    ignore:.*your performance may suffer as PyTables will pickle object.*:
+    ignore:.*Related class .* must have a primary attribute.*:
