add another config param; rename fba_time_step -> dfba_time_step; update config comments

--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -2,9 +2,10 @@
     [[multialgorithm]]
         interpolate = True
         output_directory = '.'
-        fba_time_step = 1.0
+        dfba_time_step = 1.0
         initial_ssa_wait_ema = 1
         ssa_event_logging_spacing = 100
         epsilon = 1e-9
         checkpoint_period = 10
         default_center_of_mass = 10
+        checkpointing_sim_obj_name = CHECKPOINTING_SIM_OBJ
