--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -8,21 +8,25 @@
         output_directory = string(default='.')
         # the default output directory
         
-        fba_time_step = float(min=0, default=1.0)
-        # the default time step for FBA submodels
+        dfba_time_step = float(min=0, default=1.0)
+        # the default time step for dynamic FBA submodels
         
         initial_ssa_wait_ema = integer(min=0, default=1)
-        # the default initialization value (in seconds) for an SSA Wait EMA
+        # the default initialization value (in simulated seconds) for an SSA Wait exponential moving average
         
         ssa_event_logging_spacing = integer(min=0, default=100)
-        # the interval between log messages for SSA events
+        # the interval (in simulated seconds) between log messages for SSA events
         
         epsilon = float(min=0, default=1e-9)
-        # a small time period (in seconds) for shifting event times to control the order of
+        # a small time period (in simulated seconds) for shifting event times to control the order of
         # near simultaneous events
 
         checkpoint_period = float(min=0, default=10)
+        # the period in simulated seconds between checkpoints
 
         default_center_of_mass = integer()
         # a center of mass for initializing alpha,
         # the decay factor in an exponential moving average
+
+        checkpointing_sim_obj_name = string(default='CHECKPOINTING_SIM_OBJ')
+        # the default name for the checkpointing simulation object
