define two config variables for compartments: the default value for (mean / standard deviation) of a normal distribution that lacks a std dev, and the maximum allowed accounted fraction

--- a/wc_sim/config/core.default.cfg
+++ b/wc_sim/config/core.default.cfg
@@ -9,3 +9,5 @@
         checkpoint_period = 10
         default_center_of_mass = 10
         checkpointing_sim_obj_name = CHECKPOINTING_SIM_OBJ
+        mean_to_std_dev_ratio = 10.0
+        max_allowed_init_accounted_fraction = 1.5
