--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -30,3 +30,10 @@
 
         checkpointing_sim_obj_name = string(default='CHECKPOINTING_SIM_OBJ')
         # the default name for the checkpointing simulation object
+
+        mean_to_std_dev_ratio = float(min=1.0, default=10.0)
+        # default value for (mean / standard deviation) of a normal distribution that lacks a std dev
+
+        max_allowed_init_accounted_fraction = float(min=1.0, default=1.5)
+        # in a compartment, the accounted fraction is the fraction of mass accounted for by specified species
+        # in the compartment; accounted fractions above max_allowed_init_accounted_fraction are reported as errors
