properly use species as a singluar word

--- a/wc_sim/config/core.schema.cfg
+++ b/wc_sim/config/core.schema.cfg
@@ -1,7 +1,7 @@
 [wc_sim]
     [[multialgorithm]]
         interpolate = boolean(default=True)
-        # whether to interpolate specie counts when executing Specie.get_population()
+        # whether to interpolate species counts when executing get_population()
         # interpolation incorporates a linear estimate of the change in copy number 
         # since the last update by a continuous submodel
 
